добавляю совет по тэгам

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
           <form action="">
             <input type="email" name="" id="" placeholder="Work email">
-            <input type="button" value="">
+            <input type="button" value=""> <!-- поменять бы на button,потому что input старая версия -->
           </form>
         </section>
 
