add_intro-hiring

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         </div>
 
         <nav class="menu-list">
-            <a href="#" class="list-part">Products</a>
-            <a href="#" class="list-part">Templates</a>
-            <a href="#" class="list-part">Pricing</a>
-            <a href="#" class="list-part">Customers</a>
-            <a href="#" class="list-part">Learn</a></li>
+          <a href="#" class="list-part">Products</a>
+          <a href="#" class="list-part">Templates</a>
+          <a href="#" class="list-part">Pricing</a>
+          <a href="#" class="list-part">Customers</a>
+          <a href="#" class="list-part">Learn</a>
         </nav>
 
         <div class="menu-user">
-          <a href="#" class="btn user-login">Log In</a>  
+          <a href="#" class="btn user-login">Log In</a>
           <a href="#" class="btn user-trial">Start free trial</a>
         </div>
       </div>
@@ -37,16 +37,18 @@
     <main>
       <div class="intro container--sm">
         <!-- hiringTogether -->
-        <section class="hiringTogether">
+        <section class="intro-hiringTogether">
           <h1 hidden></h1>
 
-          <h2>Where hiring comes together.</h2>
+          <h2 class="hiring-intro">Where hiring comes together.</h2>
 
-          <p>Everything you need to organise your hiring and make a great impression.</p>
+          <p class="hiring-paragraph">
+            Everything you need to organise your hiring and make a great impression.
+          </p>
 
-          <form action="">
-            <input type="email" name="" id="" placeholder="Work email">
-            <input type="button" value="">
+          <form action="#" class="hiring-form">
+            <input type="email" name="email" id="hiring-form-email" placeholder="Work email" />
+            <button type="submit" class="btn hiring-form-submit">Start free trial</button>
           </form>
         </section>
 
@@ -57,12 +59,7 @@
         <section class="howWorks"></section>
       </div>
 
-      <div class="container--lg">
-        
-      </div>
-
-
-      
+      <div class="container--lg"></div>
     </main>
 
     <!-- footer -->
