--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <!-- menu -->
       <div class="menu">
         <div class="menu-logo">
-          <a href="index.html"><img src="./img/logo.png" alt="logo" class="logo" /></a>
+          <a href="index.html"><img src="./img/header/logo.png" alt="logo" class="logo" /></a>
         </div>
 
         <nav class="menu-list">
@@ -53,10 +53,67 @@
         </section>
 
         <!-- teams -->
-        <section class="teams"></section>
+        <section class="teams">
+          <p class="teams-header">Join thousands of teams hiring with Homerun</p>
+
+          <div class="teams-list">
+            <div class="teams-imgContainer">
+              <a href="#">
+                <img src="./img/header/header_teams/tbwa.png" alt="tbwa" />
+              </a>
+            </div>
+
+            <div class="teams-imgContainer">
+              <a href="#" class="imgContainer-teamLogo">
+                <img src="./img/header/header_teams/toys.png" alt="toys" />
+              </a>
+            </div>
+
+            <div class="teams-imgContainer">
+              <a href="#" class="imgContainer-teamLogo">
+                <img src="./img/header/header_teams/buffer.png" alt="buffer" />
+              </a>
+            </div>
+
+            <div class="teams-imgContainer">
+              <a href="#" class="imgContainer-teamLogo">
+                <img src="./img/header/header_teams/volksHotel.png" alt="volksHotel" />
+              </a>
+            </div>
+
+            <div class="teams-imgContainer">
+              <a href="#" class="imgContainer-teamLogo">
+                <img src="./img/header/header_teams/geckoboard.png" alt="geckoboard" />
+              </a>
+            </div>
+
+            <div class="teams-imgContainer">
+              <a href="#" class="imgContainer-teamLogo">
+                <img src="./img/header/header_teams/publicisGrupe.png" alt="publicisGrupe" />
+              </a>
+            </div>
+
+            <div class="teams-imgContainer">
+              <a href="#" class="imgContainer-teamLogo">
+                <img src="./img/header/header_teams/tnw.png" alt="tnw" />
+              </a>
+            </div>
+          </div>
+        </section>
 
         <!-- howWorks -->
-        <section class="howWorks"></section>
+        <section class="howWorks">
+          <h2 class="howWorks-header">How Homerun Works</h2>
+
+          <div class="howWorks-player">
+            <img src="./img/header/player.png" alt="player" />
+
+            <button value="#" class="btn player-btn">
+              <img src="./img/header/player-btn.png" alt="" />
+              <span class="btn-text">Watch: Homerun in 90 seconds</span>
+            </button>
+          </div>
+        </section>
       </div>
 
       <div class="container--lg"></div>
