--- a/index.html
+++ b/index.html
@@ -59,43 +59,43 @@
           <div class="teams-list">
             <div class="teams-imgContainer">
               <a href="#">
-                <img src="./img/header/header_teams/tbwa.png" alt="tbwa" />
+                <img src="./img/main/intro/teams/tbwa.png" alt="tbwa" />
               </a>
             </div>
 
             <div class="teams-imgContainer">
               <a href="#" class="imgContainer-teamLogo">
-                <img src="./img/header/header_teams/toys.png" alt="toys" />
+                <img src="./img/main/intro/teams/toys.png" alt="toys" />
               </a>
             </div>
 
             <div class="teams-imgContainer">
               <a href="#" class="imgContainer-teamLogo">
-                <img src="./img/header/header_teams/buffer.png" alt="buffer" />
+                <img src="./img/main/intro/teams/buffer.png" alt="buffer" />
               </a>
             </div>
 
             <div class="teams-imgContainer">
               <a href="#" class="imgContainer-teamLogo">
-                <img src="./img/header/header_teams/volksHotel.png" alt="volksHotel" />
+                <img src="./img/main/intro/teams/volksHotel.png " alt="volksHotel" />
               </a>
             </div>
 
             <div class="teams-imgContainer">
               <a href="#" class="imgContainer-teamLogo">
-                <img src="./img/header/header_teams/geckoboard.png" alt="geckoboard" />
+                <img src="./img/main/intro/teams/geckoboard.png" alt="geckoboard" />
               </a>
             </div>
 
             <div class="teams-imgContainer">
               <a href="#" class="imgContainer-teamLogo">
-                <img src="./img/header/header_teams/publicisGrupe.png" alt="publicisGrupe" />
+                <img src="./img/main/intro/teams/publicisGrupe.png" alt="publicisGrupe" />
               </a>
             </div>
 
             <div class="teams-imgContainer">
               <a href="#" class="imgContainer-teamLogo">
-                <img src="./img/header/header_teams/tnw.png" alt="tnw" />
+                <img src="./img/main/intro/teams/tnw.png" alt="tnw" />
               </a>
             </div>
           </div>
@@ -106,17 +106,59 @@
           <h2 class="howWorks-header">How Homerun Works</h2>
 
           <div class="howWorks-player">
-            <img src="./img/header/player.png" alt="player" />
+            <img src="./img//main/intro/player.png" alt="player" />
 
             <button value="#" class="btn player-btn">
-              <img src="./img/header/player-btn.png" alt="" />
+              <img src="./img//main/intro/player-btn.png" alt="" />
               <span class="btn-text">Watch: Homerun in 90 seconds</span>
             </button>
           </div>
         </section>
       </div>
 
-      <div class="container--lg"></div>
+      <div class="main-content container--lg">
+        <section class="content-benefits">
+          <div class="benefits-hire benefits-container">
+            <div class="hire-tool container-content">
+              <h3 class="hire-title">Hire</h3>
+              <h2 class="benefits-header">An all-in-one tool for your entire team.</h2>
+              <p class="benefits-text">
+                No more ping-ponging between emails, spreadsheets, and other apps. Bring everything together
+                in one place.
+              </p>
+              <button class="btn benefits-btn">Learn more</button>
+            </div>
+            <div class="hire-img">
+              <img src="./img/main/benefits/hire-img.png" alt="hire" />
+              <p class="img-signature">All your jobs, candidates, messages and notes in one place.</p>
+            </div>
+          </div>
+
+          <div class="benefits-container benefits-create">
+            <div class="create-forCandidats container-content">
+              <h3 class="create-title">Create</h3>
+              <h2 class="benefits-header">An experience candidates simply love.</h2>
+              <p class="benefits-text">
+                Treat candidates with a rich career site, beautiful job posts, tailored application forms and
+                faster response times.
+              </p>
+              <button class="btn benefits-btn">Learn more</button>
+            </div>
+            <div class="create-img">
+              <img src="./img/main/benefits/create-img.png" alt="create" />
+              <p class="img-signature">Career page created with Homerun.</p>
+            </div>
+          </div>
+        </section>
+
+        <section class="content-reviews"></section>
+
+        <section class="content-templates"></section>
+
+        <section class="content-rating"></section>
+
+        <section class="content-startTrial"></section>
+      </div>
     </main>
 
     <!-- footer -->
