add_review_templates_rating

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 
         <nav class="menu-list">
           <a href="#" class="list-part">Products</a>
-          <a href="#" class="list-part">Templates</a>
+          <a href="#" class="list-part"
+            >Templates
+            <span class="label">new</span>
+          </a>
           <a href="#" class="list-part">Pricing</a>
           <a href="#" class="list-part">Customers</a>
           <a href="#" class="list-part">Learn</a>
@@ -116,9 +119,9 @@
         </section>
       </div>
 
-      <div class="main-content container--lg">
+      <div class="container--lg main-content">
         <section class="content-benefits">
-          <div class="benefits-hire benefits-container">
+          <div class="benefits-container">
             <div class="hire-tool container-content">
               <h3 class="hire-title">Hire</h3>
               <h2 class="benefits-header">An all-in-one tool for your entire team.</h2>
@@ -134,9 +137,9 @@
             </div>
           </div>
 
-          <div class="benefits-container benefits-create">
-            <div class="create-forCandidats container-content">
-              <h3 class="create-title">Create</h3>
+          <div class="benefits-container benefits-forCandidats">
+            <div class="container-content">
+              <h3 class="forCandidats-title">Create</h3>
               <h2 class="benefits-header">An experience candidates simply love.</h2>
               <p class="benefits-text">
                 Treat candidates with a rich career site, beautiful job posts, tailored application forms and
@@ -144,20 +147,81 @@
               </p>
               <button class="btn benefits-btn">Learn more</button>
             </div>
-            <div class="create-img">
+            <div class>
               <img src="./img/main/benefits/create-img.png" alt="create" />
               <p class="img-signature">Career page created with Homerun.</p>
             </div>
           </div>
         </section>
 
-        <section class="content-reviews"></section>
+        <section class="main-containerContent content-reviews">
+          <img src="./img/main/review/review-logo.png" alt="review-logo" class="reviews-logo" />
+          <h2 class="review-title">Join the club.</h2>
+          <p class="review-text">
+            Homerun customers share a passion for culture, design and innovation. <br />
+            We all agree hiring can be more meaningful and personal.
+          </p>
+          <button class="btn review-btn">About our customers</button>
+          <div class="review-userSlider">
+            <div class="userSlider-item">
+              <img src="./img/main/review/blovkUser-img.png" alt="userImg" class="UnitUser-photo" />
+              <div class="user-comment">
+                <img src="./img/main/review/comment-img.png" alt="img" class="comment-img" />
+                <p class="comment-text">
+                  “You don't need to be a pro in HR or even in Homerun to be able to use it. It's so easy that
+                  anyone in the team can figure it out.”
+                </p>
+                <p class="comment-aboutUser">
+                  Isabel Machielse <br />
+                  People & Culture Coordinator
+                </p>
+                <button class="btn review-btn">Read customer story</button>
+              </div>
+            </div>
+            <ul class="userSlider-pagination">
+              <li class="userSlider-pagination-item userSlider-pagination-item--active"></li>
+              <li class="userSlider-pagination-item"></li>
+              <li class="userSlider-pagination-item"></li>
+              <li class="userSlider-pagination-item"></li>
+            </ul>
+          </div>
+        </section>
 
-        <section class="content-templates"></section>
+        <section class="main-containerContent content-templates">
+          <span class="label templates-label">new</span>
+          <h2 class="templates-title">Kickstart hiring <br />with Homerun templates.</h2>
+          <p class="templates-text">
+            Ready to use job templates to help you with <br />the hardest parts of creating a job post.
+          </p>
+          <button class="btn templates-btn">Explore all templates</button>
+          <img src="./img/main/templates.png" alt="" class="templates-img" />
+        </section>
 
-        <section class="content-rating"></section>
+        <section class="main-containerContent content-rating">
+          <div class="rating-container rating-captera">
+            <img src="./img/main/rating/capterra.png" alt="" class="container-img" />
+            <div class="rating-blockRating">
+              <p>4,5</p>
+              <div class="blockRating-item">
+                <img src="./img/main/rating/capterra-rating.png" alt="" />
+              </div>
+            </div>
+            <p class="rating-text">Average review on Capterra,<br />independent review site</p>
+          </div>
 
-        <section class="content-startTrial"></section>
+          <div class="rating-container rating-intercom">
+            <img src="./img/main/rating/intercom.png" alt="" class="container-img" />
+            <div class="rating-blockRating">
+              <p>98,8%</p>
+              <div class="blockRating-item">
+                <img src="./img/main/rating/intercom-rating.png" alt="" />
+              </div>
+            </div>
+            <p class="rating-text">Average rating based on<br />1500+ support conversations</p>
+          </div>
+        </section>
+
+        <section class="main-containerContent content-startTrial"></section>
       </div>
     </main>
 
