--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
 
         <nav class="menu-list">
           <a href="#" class="list-part">Products</a>
-          <a href="#" class="list-part"
-            >Templates
-            <span class="label">new</span>
-          </a>
+          <a href="#" class="list-part label">Templates </a>
           <a href="#" class="list-part">Pricing</a>
           <a href="#" class="list-part">Customers</a>
           <a href="#" class="list-part">Learn</a>
@@ -188,7 +185,7 @@
         </section>
 
         <section class="main-containerContent content-templates">
-          <span class="label templates-label">new</span>
+          <span class="label templates-label"></span>
           <h2 class="templates-title">Kickstart hiring <br />with Homerun templates.</h2>
           <p class="templates-text">
             Ready to use job templates to help you with <br />the hardest parts of creating a job post.
@@ -221,7 +218,15 @@
           </div>
         </section>
 
-        <section class="main-containerContent content-startTrial"></section>
+        <section class="main-containerContent content-startTrial">
+          <img src="./img/main/startTrial-logo.png" alt="" class="startTraial-logo" />
+          <h2 class="startTrial-title">Start your free <br />Homerun trial today</h2>
+          <button class="btn startTrial-btn">Start free trial</button>
+          <ul class="startTrial-list">
+            <li class="startTrial-list-item">Totally free for 15 days</li>
+            <li class="startTrial-list-item">No credit card needed</li>
+          </ul>
+        </section>
       </div>
     </main>
 
