--- a/index.html
+++ b/index.html
@@ -231,6 +231,136 @@
     </main>
 
     <!-- footer -->
-    <footer></footer>
+    <footer class="container--sm footer-container">
+      <div class="footer-head">
+        <img src="/img/header/logo.png" alt="" class="footer-logo" />
+        <button class="btn footer-btn">Start free trial</button>
+      </div>
+      <div class="footer-content">
+        <div class="footer-content-item">
+          <p class="footer-title">Product</p>
+          <ul class="footer-content-list">
+            <li>
+              <a href="#" class="footer-list-hire">Hire</a>
+            </li>
+
+            <li>
+              <a href="#" class="footer-list-create">Create</a>
+            </li>
+
+            <li>
+              <a href="#">Templates</a>
+            </li>
+
+            <li>
+              <a href="#">All features</a>
+            </li>
+
+            <li class="footer-list-indent">
+              <a href="#">Pricing</a>
+            </li>
+
+            <li>
+              <a href="#">New in Homerun ✨</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer-content-item">
+          <p class="footer-title">Learn</p>
+          <ul class="footer-content-list">
+            <li>
+              <a href="#">Blog</a>
+            </li>
+
+            <li>
+              <a href="#">Help Center</a>
+            </li>
+          </ul>
+
+          <p class="footer-title footer-title-indent">Guides</p>
+          <ul class="footer-content-list">
+            <li>
+              <a href="#" class="label footer-label-guides">Remote Hiring</a>
+            </li>
+
+            <li>
+              <a href="#">Employer Branding</a>
+            </li>
+
+            <li>
+              <a href="#">Job Interviewing</a>
+            </li>
+
+            <li>
+              <a href="#">Diversity & Inclusion</a>
+            </li>
+
+            <li>
+              <a href="#">Attracting Talent</a>
+            </li>
+
+            <li>
+              <a href="#">GDPR Hiring</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer-content-item">
+          <p class="footer-title">About Homerun</p>
+          <ul class="footer-content-list">
+            <li>
+              <a href="#">About us</a>
+            </li>
+
+            <li>
+              <a href="#" class="label footer-label-about">We`re hiring</a>
+            </li>
+
+            <li>
+              <a href="#">Contact us</a>
+            </li>
+          </ul>
+
+          <p class="footer-title footer-title-indent">Legal</p>
+          <ul class="footer-content-list">
+            <li>
+              <a href="#">Terms</a>
+            </li>
+
+            <li>
+              <a href="#">Privacy</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer-content-item">
+          <p class="footer-title">Art of Work newsletter</p>
+          <ul class="footer-content-list">
+            <li>
+              <a href="#"
+                >Receive must-read articles and trends on company culture, hiring and work/life balance.</a
+              >
+            </li>
+          </ul>
+
+          <p class="footer-title footer-title-newsletter">Sign up to our newsletter</p>
+          <ul class="footer-content-newsletter">
+            <li class="footer-newsletter-item"></li>
+          </ul>
+          <div class="footer-content-social">
+            <a href="https://www.instagram.com/" target="_blank">
+              <img src="/img/footer/inst.png" alt="instagram" />
+            </a>
+            <a href="https://www.linkedin.com/" target="_blank">
+              <img src="/img/footer/lin.png" alt="linked_in" />
+            </a>
+            <a href="https://twitter.com/" target="_blank">
+              <img src="/img/footer/twitter.png" alt="twitter" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
