footer: fix path to images

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <!-- footer -->
     <footer class="container--sm footer-container">
       <div class="footer-head">
-        <img src="/img/header/logo.png" alt="" class="footer-logo" />
+        <img src="./img/header/logo.png" alt="" class="footer-logo" />
         <button class="btn footer-btn">Start free trial</button>
       </div>
       <div class="footer-content">
@@ -350,13 +350,13 @@
           </ul>
           <div class="footer-content-social">
             <a href="https://www.instagram.com/" target="_blank">
-              <img src="/img/footer/inst.png" alt="instagram" />
+              <img src="./img/footer/inst.png" alt="instagram" />
             </a>
             <a href="https://www.linkedin.com/" target="_blank">
-              <img src="/img/footer/lin.png" alt="linked_in" />
+              <img src="./img/footer/lin.png" alt="linked_in" />
             </a>
             <a href="https://twitter.com/" target="_blank">
-              <img src="/img/footer/twitter.png" alt="twitter" />
+              <img src="./img/footer/twitter.png" alt="twitter" />
             </a>
           </div>
         </div>
